<?xml version="1.0" encoding="utf-8"?>
<resources>
    <string name="app_name">µWidgets</string>
    <string name="widget_label">Weather</string>
    <string name="weather_unavailable">Weather unavailable</string>
    <string name="settings_section_appearance">Appearance</string>
    <string name="settings_section_appearance_subtitle">Applies to all widgets</string>
    <string name="settings_section_weather">Weather widget</string>
    <string name="settings_section_alarm">Alarm widget</string>
    <string name="settings_alignment">Alignment</string>
    <string name="settings_tap_action_short">Tap action</string>
    <string name="settings_show_condition">Show condition</string>
    <string name="settings_unit_title">Temperature unit</string>
    <string name="settings_unit_auto">Automatic (follow system)</string>
    <string name="settings_unit_celsius">Celsius (°C)</string>
    <string name="settings_unit_fahrenheit">Fahrenheit (°F)</string>
    <string name="settings_dynamic_color">Use wallpaper color</string>
    <string name="settings_font_size">Font size</string>
    <string name="font_size_value">%1$d sp</string>
    <string name="settings_text_align">Weather alignment</string>
    <string name="align_left">Left</string>
    <string name="align_center">Center</string>
    <string name="align_right">Right</string>
    <string name="settings_tap_action">Weather tap action</string>
    <string name="tap_action_refresh">Refresh weather</string>
    <string name="tap_action_launch">Launch %1$s</string>
    <string name="settings_section_permissions">Permissions</string>
    <string name="permission_row">%1$s  %2$s</string>
    <string name="permission_location">Location</string>
    <string name="permission_background_location">Location all the time</string>
    <string name="permission_background_data">Background data</string>
    <string name="placeholder_temperature">--°</string>
    <string name="alarm_widget_label">Alarm</string>
    <string name="alarm_none">No alarm</string>
    <string name="alarm_tomorrow">Tomorrow</string>
    <string name="settings_alarm_tap_action">Alarm tap action</string>
    <string name="alarm_tap_default">Clock app</string>
    <string name="background_location_title">Allow location all the time</string>
    <string name="background_location_message">The weather widget may not update to your location properly if background location permission is not granted all the time; it is recommended to turn this setting on.</string>
    <string name="background_location_open_settings">Open Settings</string>
    <string name="background_location_dismiss">Not now</string>
    <string name="background_data_title">Allow background data</string>
    <string name="background_data_message">The weather widget may stop updating on metered networks (such as mobile data or a Wi‑Fi hotspot) if background data is not allowed; it is recommended to turn this setting on.</string>
    <string name="settings_version">Version %1$s</string>
    <string name="app_list_widget_label">Apps</string>
    <string name="app_list_empty">No apps selected</string>
    <string name="app_list_icon_desc">App icon</string>
    <string name="app_list_display_title">Show</string>
    <string name="app_list_display_icon">Icon</string>
    <string name="app_list_display_label">Label</string>
    <string name="app_list_display_both">Both</string>
    <string name="app_list_select_apps">Apps to show</string>
    <string name="app_list_select_all">Select all</string>
    <string name="app_list_deselect_all">Deselect all</string>
    <string name="app_list_save">Add widget</string>
</resources>
